FIX: Fixed an issue where smaller screens were causing the navbar to overlap with the social links. Removed background and reduced the max-width to help with this.

--- a/src/components/Navbar/Navbar.style.scss
+++ b/src/components/Navbar/Navbar.style.scss
@@ -9,11 +9,11 @@
 
 .navbar {
   position: fixed;
-  width: 100%;
+  max-width: 100%;
   opacity: 0.85;
   height: 50px;
   z-index: 12;
-  background-color: #222;
+  // background-color: #222;
 }
 
 .navbar-container {
@@ -62,6 +62,8 @@
 @media (max-width: 768px) {
   .navbar {
     opacity: 0.95;
+    width: 40%;
+
   }
 
   .navbar-container input[type="checkbox"],
@@ -71,8 +73,8 @@
 
   .navbar-container {
     display: flex;
-    height: 98.3vh;
-    max-width: 40em;
+    height: 100vh;
+    max-width: 12em;
   }
 
   .navbar-container input[type="checkbox"] {
@@ -123,7 +125,7 @@
 
   .navbar .menu-items {
     padding-top: 100px;
-    background: #222;
+    // background: #222;
     height: 100vh;
     max-width: 30rem;
     width: 95%;
